# OpenMPVectorHoriVert

./: CMakeLists.txt  README.md  complexnumber.cpp  complexvector.cpp  complexvector.hpp  complexvector0.cpp  complexvector0.hpp  complexvector1.cpp  complexvector1.hpp  main.cpp  makefile.txt  scan.cpp
